# shamrock

./: .gitignore  CMakeLists.txt  CREDITS  ISSUES  README  README.txt  TODO  opencl-manifest.docx
clocl/: CMakeLists.txt  Makefile  compiler.cpp  compiler.h  main.cpp  options.cpp  options.h  program.cpp
cmake/modules/: FindClang.cmake  FindLLVM.cmake  FindOpenCLHeaders.cmake
doc/: Makefile  opencl_readme.tex
include/: clc.h  cpu.h  dsp.h
include/CL/: cl_ext.h
init/: Makefile
src/: CMakeLists.txt
src/api/: api_command.cpp  api_context.cpp  api_device.cpp  api_enqueue.cpp  api_event.cpp  api_kernel.cpp  api_memory.cpp  api_platform.cpp  api_program.cpp  api_sampler.cpp
src/builtins/: CMakeLists.txt  Makefile  README.txt  abs.cl  abs_diff.cl  add_sat.cl  atomics.cl  atomics.cl.broken  clz.cl  convert.cl  fract.cl  frexp.cl  length.cl  lgamma_r.cl  mad_sat.cl  math.cl  misc.cl  modf.cl  mul_hi.cl  pocl_types.h  popcount.cl  printf.c  remquo.cl  rotate.cl  sincos.cl  sub_sat.cl  upsample.cl
src/core/: commandqueue.cpp  commandqueue.h  compiler.cpp  compiler.h  config.h  context.cpp  context.h  deviceinterface.h  events.cpp  events.h  icd.cpp  kernel.cpp  kernel.h  memobject.cpp  memobject.h  object.cpp  platform.cpp  platform.h  program.cpp  program.h  sampler.cpp  util.cpp  util.h
src/core/cpu/: buffer.cpp  builtins.cpp  device.cpp  device.h  kernel.cpp  kernel.h  program.cpp  program.h  sampler.cpp  worker.cpp
src/core/dsp/: buffer.cpp  device.cpp  device.h  driver.cpp  driver.h  driver_hawking.cpp  driver_shannon.cpp  dspheap.h  dspmem.h  genfile_cache.cpp  genfile_cache.h  kernel.cpp  kernel.h  mailbox.h  message.h  program.cpp  program.h  shmem.cpp  shmem.h  wga.cpp  wga.h  worker.cpp
src/core/dsp/ocl_load/C60_DLOAD_REL/: c60_reloc.c
src/core/dsp/ocl_load/DLOAD/: dload.c  symtab.h
src/core/dsp/ocl_load/DLOAD_SYM/: symtab.c
src/llvmopencl/: Barrier.h  ImplicitLoopBarriers.cc  Kernel.cc  Makefile.in  VariableUniformityAnalysis.cc  Workgroup.cc  WorkitemHandlerChooser.cc  WorkitemLoops.cc  WorkitemLoops.h  WorkitemReplication.cc
src/runtime/: CMakeLists.txt
tests/: CMakeLists.txt  api_test_failures.lst  basic_parameter_types.cl  basic_parameter_types.txt  basic_test_failures.lst  buffer_test_failures.lst  test_basic_parameter_types.cpp  test_basic_parameter_types.h  test_commandqueue.cpp  test_device.cpp  test_kernel.cpp  test_mem.cpp  vector_args.bc  vector_args.cl  vector_args.spir.ll  vector_args.x86.ll
util/: CMakeLists.txt
